# graphql_jsoo_client

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  graphql_jsoo_client.opam  graphql_schema.json
example/: .ocamlinit
example/frontend/: dune  test_graphql_jsoo_client.ml
example/frontend/graphql/: dune  queries.ml
example/server/: server.eml.ml
lib/: client.ml  client.mli  client_ws.ml  connection.ml  connection.mli  dune  graphql_jsoo_client.ml  querySig.mli
static/: ws_test.html
test/: dune
