(executable
 (name test_graphql_jsoo_client)
 (modules Test_graphql_jsoo_client)
 (libraries
   lwt
   js_of_ocaml
   js_of_ocaml-lwt
   cohttp-lwt-jsoo uri yojson graphql_ppx
   graphql_jsoo_client
   test_frontend_graphql
 )
 (modes js)
   (promote
    (into ../../static/))
 (preprocess (pps  lwt_ppx js_of_ocaml-ppx ppx_typed_fields))
)
